# nx-software-center

./: .gitignore  .travis.yml  README.md
cmake/: libappimage.cmake
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/cmake/: fetch_gtest.cmake
test/src/: TestOSCStoreParser.cpp
